# Instantons

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE
data/: cooled_correlator.csv  cooled_path.csv  det_cooling_action_history.csv  ensemble_cooled_correlator_avg.csv  ensemble_quantum_correlator_avg.csv  ensemble_quantum_positions.csv  fig10_rilm_correlators.csv  fig10_trials_correlators.csv  fig11_gaussian_effective_potential.csv  fig12_heated_metro_rilm_path.csv  fig12_heated_rilm_path.csv  fig12_rilm_path.csv  fig13_heated_rilm_correlators.csv  fig13_trials_correlators.csv  fig14_mc_tauZ.csv  fig14_streamline_tauZ.csv  fig14_sum_tauIA.csv  fig14_sum_tauZ.csv  fig15_paths.csv  fig16_histograms.csv  fig16_separations.csv  fig17_positions.csv  fig4_quantum_correlators.csv  fig4_trials_correlators.csv  fig5_free_energy.csv  fig5_switching_integrand.csv  fig6_cooled_correlators.csv  fig6_trials_correlators.csv  fig7_long.csv  fig8_cooling10.csv  fig8_qmidens.csv  fig9_paths.csv  quantum_correlator.csv  quantum_path.csv
data/seed_scan/: cooled_path_seed1.csv  cooled_path_seed10.csv  cooled_path_seed2.csv  cooled_path_seed3.csv  cooled_path_seed4.csv  cooled_path_seed5.csv  cooled_path_seed6.csv  cooled_path_seed7.csv  cooled_path_seed8.csv  cooled_path_seed9.csv  quantum_path_seed1.csv  quantum_path_seed10.csv  quantum_path_seed2.csv  quantum_path_seed3.csv  quantum_path_seed4.csv  quantum_path_seed5.csv  quantum_path_seed6.csv  quantum_path_seed7.csv  quantum_path_seed8.csv  quantum_path_seed9.csv
docs/: README.md  algorithms.md  index.html  mainpage.dox  theory.md
docs/api/html/: analysis__driver_8cpp.html  analysis__driver_8cpp__incl.map  analysis__driver_8cpp__incl.md5  analysis__driver_8hpp.html  analysis__driver_8hpp__dep__incl.map  analysis__driver_8hpp__dep__incl.md5  analysis__driver_8hpp__incl.map  analysis__driver_8hpp__incl.md5  analysis__driver_8hpp_source.html  annotated.html  classLattice-members.html  classLattice.html  classMetropolis-members.html  classMetropolis.html  classMetropolis__coll__graph.map  classMetropolis__coll__graph.md5  classes.html  cooling__evolution_8cpp.html  cooling__evolution_8cpp__incl.map  cooling__evolution_8cpp__incl.md5  cooling__evolution_8hpp.html  cooling__evolution_8hpp__dep__incl.map  cooling__evolution_8hpp__dep__incl.md5  cooling__evolution_8hpp__incl.map  cooling__evolution_8hpp__incl.md5  cooling__evolution_8hpp_source.html  dir_000001_000002.html  dir_000002_000003.html  dir_000002_000004.html  dir_000002_000005.html  dir_000003_000005.html  dir_000004_000003.html  dir_000004_000005.html  dir_2eec376824a17f48dc36b4bd0c810e01.html  dir_2eec376824a17f48dc36b4bd0c810e01_dep.map  dir_2eec376824a17f48dc36b4bd0c810e01_dep.md5  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+231 more)
plots/: plot_fig1.py  plot_fig10ratiojk.py  plot_fig11.py  plot_fig12.py  plot_fig12metro.py  plot_fig13ratiojk.py  plot_fig14.py  plot_fig15.py  plot_fig16.py  plot_fig17.py  plot_fig2.py  plot_fig2_6.py  plot_fig2det.py  plot_fig3.py  plot_fig4.py  plot_fig4ratio.py  plot_fig4ratiojk.py  plot_fig5.py  plot_fig6ratiojk.py  plot_fig7.py  plot_fig8.py  plot_fig9.py
src/: analysis_driver.cpp  analysis_driver.hpp  cooling_evolution.cpp  cooling_evolution.hpp  ensemble.cpp  ensemble.hpp  fig11_gauss.cpp  fig14_ia_interaction.cpp  fig14_ia_interaction.hpp  heating.cpp  heating.hpp  iilm.cpp  iilm.hpp  instanton.cpp  instanton.hpp  io.cpp  io.hpp  lattice.cpp  lattice.hpp  main.cpp  metropolis.cpp  metropolis.hpp  observables.cpp  observables.hpp  parameters.hpp  potential.cpp  potential.hpp  qmidens.cpp  qmidens.hpp  rilm.cpp  rilm.hpp
src/analysis/: analysis_driver.cpp  analysis_driver.hpp  cooling_evolution.cpp  cooling_evolution.hpp  ensemble.cpp  ensemble.hpp  fig10_rilm.cpp  fig10_rilm.hpp  fig11_gauss.cpp  fig12_13_heating.cpp  fig12_13_heating.hpp  fig14_16.cpp  fig14_16.hpp  fig15.cpp  fig15.hpp  fig17_iilm.cpp  fig17_iilm.hpp  fig7.cpp  fig7.hpp  fig8.cpp  fig8.hpp  fig9.cpp  fig9.hpp  qmidens.cpp  qmidens.hpp
src/core/: instanton.cpp  lattice.cpp  lattice.hpp  metropolis.cpp  metropolis.hpp  observables.cpp  observables.hpp  potential.cpp  potential.hpp
src/models/: fig14_ia_interaction.cpp  heating.cpp  heating.hpp  iilm.cpp  iilm.hpp  rilm.cpp  rilm.hpp
src/utils/: io.cpp  io.hpp  parameters.hpp  periodic.hpp  statistics.cpp  statistics.hpp
tests/: test_01_action.cpp  test_02_potential_and_bc.cpp  test_03_cooling_rule.cpp
(+68 files in other folders)
